--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,15 @@
 @import '~antd/dist/antd.css';
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:ital,wght@0,300;0,700;1,300&display=swap');
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body {
+    font-family: 'Open Sans Condensed', sans-serif;
+    font-size: 16px;
+    background: #f0f2f5;
+  }
 .App {
   text-align: center;
 }
