--- a/client/src/components/Typography/style.css
+++ b/client/src/components/Typography/style.css
@@ -12,3 +12,13 @@
     margin: 0 0 1.5rem;
     font-family: 'Open Sans Condensed', sans-serif;
 }
+.heading-4{
+    color: #fff;
+    font-weight: 700;
+    font-size: 1.2rem;
+}
+.heading-5{
+    color: #fff;
+    font-weight: 500;
+    font-size: 1.2rem;
+}
