--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,3 +3,20 @@
 }
 
 
+
+
+.button button{
+  width: 100%;
+  height: 100%;
+  background: transparent;
+  border: none;
+cursor: pointer;
+outline: none;
+}
+
+
+.image img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
